adds card and tabs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,5 +12,5 @@
 /* Components */
 @import 'components/section';
 @import 'components/post';
-@import 'components/preview';
+@import 'components/tabs';
  
