--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // Color
 $blue-color: #2ED9E3;
 $light-blue-color: #DFF9FA;
-$grey-color: #2B2C37;
+$grey-color: #E9E9EB;
 $yellow-color: #FDD052;
 $green-color: #26AA70;
 $red-color: #F56323;
