--- a/src/styles/components/tabs.scss
+++ b/src/styles/components/tabs.scss
@@ -8,12 +8,12 @@
         flex: 1;
         text-align: center;
         padding: 15px 0;
-    }
-}
 
-.active {
-    border-bottom: 2px solid $black-color;
-    margin: -3px;
-    padding: 18px 0;
-    color: $black-color;
+        &--active {
+            border-bottom: 2px solid $black-color;
+            margin: -3px;
+            padding: 18px 0;
+            color: $black-color;
+        }
+    }
 }
