--- a/src/styles/components/section.scss
+++ b/src/styles/components/section.scss
@@ -6,3 +6,18 @@
         border-radius: 16px;
     }
 }
+
+.box-button {
+    width: 60%;
+    // text-transform: none;
+}
+
+.date {
+    width: 40%;
+}
+
+.foo {
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
