--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -1,13 +1,13 @@
 body {
     font-size: 16px;
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: transparentize($grey-color, 0.45);
+    color: transparentize($black-color, 0.65);
     line-height: 1.5;
     background: #ECEFF4;
 }
 
 h1 {
-    color: $grey-color;
+    color: $black-color;
     font-family: 'Roboto Condensed';
     font-size: 2.25rem;
     font-weight: 800;
@@ -22,13 +22,22 @@ h2 {
 }
 
 .text {
+    margin: 15px 0;
+    color: $black-color;
+
     &--lead {
         font-size: 1.375rem; // 22px
         font-weight: 800;
+        margin-bottom: 0;
     }
 
     &--small {
         font-size: 0.875rem; // 14px
+        margin: 15px 0;
+        color: $black-color;
+        text-transform: uppercase;
+        font-weight: 500;
+        margin-bottom: 0;
     }
 
     &--smallest {
