adds style for custom scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,8 @@
 
 /* Components */
 @import 'components/section';
+@import 'components/content';
+@import 'components/card';
 @import 'components/post';
 @import 'components/tabs';
  
