--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -21,8 +21,11 @@ h2 {
     margin: 0 0 0.8em 0;
 }
 
+p {
+    margin-top: 0;
+}
+
 .text {
-    margin: 15px 0;
     color: $black-color;
 
     &--lead {
