--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,9 +10,7 @@
 @import 'base/menu';
 
 /* Components */
-@import 'components/section';
-@import 'components/content';
+@import 'components/download';
 @import 'components/card';
-@import 'components/post';
 @import 'components/tabs';
  
