--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -16,7 +16,7 @@ h1 {
 }
 
 h2 {
-    font-size: 1.25rem;
+    font-size: 1.25rem; //  24px
     color: $grey-color;
     margin: 0 0 0.8em 0;
 }
@@ -32,6 +32,7 @@ p {
         font-size: 1.375rem; // 22px
         font-weight: 800;
         margin-bottom: 0;
+        color: $black-color;
     }
 
     &--small {
@@ -44,6 +45,6 @@ p {
     }
 
     &--smallest {
-        font-size: 0.3rem; // 12px
+        font-size: 0.75rem; // 12px
     }
 }
