--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,4 +15,7 @@
 @import 'components/tabs';
 @import 'components/stats';
 @import 'components/label';
+@import 'components/img';
+@import 'components/opinion';
+@import 'components/diagram';
  
