--- a/src/styles/components/stats.scss
+++ b/src/styles/components/stats.scss
@@ -1,9 +1,9 @@
 .stats {
     display: flex;
+    text-align: center;
 
     &__item {
         flex-grow: 1;
-        padding: 10px;
         text-transform: uppercase;
 
         &:not(:last-child) {
