--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -29,24 +29,23 @@ p {
     color: $black-color;
 
     &--lead {
-        font-size: 1.375rem; // 22px
-        font-weight: 800;
-        margin-bottom: 0;
         color: $black-color;
+        margin-bottom: 0;
+        font-weight: 800;
+        font-size: 1.375rem; // 22px
     }
 
     &--small {
-        font-size: 0.875rem; // 14px
-        margin: 15px 0;
         color: $black-color;
-        text-transform: uppercase;
+        margin: 15px 0 0;
+        font-size: 0.875rem; // 14px
         font-weight: 500;
-        margin-bottom: 0;
+        text-transform: uppercase;
     }
 
     &--smallest {
-        font-size: 0.75rem; // 12px
         color: $grey-color;
+        font-size: 0.75rem; // 12px
         text-transform: none;
     }
 }
