--- a/src/styles/components/download.scss
+++ b/src/styles/components/download.scss
@@ -1,41 +1,42 @@
-.download-list {
-    overflow: scroll;
-    height: 300px;
-    margin: 20px 0 0;
-
-    &::-webkit-scrollbar {
-        width: 8px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background: $grey-color;
-        border-radius: 7px;
-    }
-
-    &__item {
-        display: flex;
-        align-items: center;
-        margin-top: 15px;
-    }
-}
-
 .download {
+
+    &-list {
+        height: 300px;
+        margin: 20px 0 0;
+        overflow: scroll;
+    
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            background: $grey-color;
+            border-radius: 7px;
+        }
+    
+        &__item {
+            margin-top: 15px;
+            display: flex;
+            align-items: center;
+        }
+    }
+
     &__date {
         width: 40%;
     }
 
     &__file {
+        color: rgba(43,44,55,0.66);
+        background-color: $grey-color;
         width: 60%;
+        padding: 7px 15px;
         margin-right: 30px; 
+        font-weight: 400;
         border-radius: 20px;
         border: none;
-        background-color: $grey-color;
-        font-weight: 400;
         text-transform: none;
-        color: rgba(43,44,55,0.66);
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 7px 15px;
     }
 }
