--- a/src/styles/base/button.scss
+++ b/src/styles/base/button.scss
@@ -20,10 +20,11 @@
         color: rgba(43,44,55,0.66);
         background-color: $grey-color;
         max-width: 125px;
-        padding: 7px;
+        padding: 5px;
         margin-top: -15px;
         margin-left: 10px;
         border-radius: 28px;
+        font-size: 12px; 
         text-transform: uppercase;
         display: flex;
         justify-content: center;
