--- a/src/styles/components/img.scss
+++ b/src/styles/components/img.scss
@@ -10,3 +10,15 @@
         height: auto;
     }
 }
+
+.box-img {
+    height: 550px;
+    overflow: hidden;
+    margin-bottom: 30px;
+
+    &__img {
+        width: 100%;
+        height: auto;
+        // margin-top: 10px;
+    }
+}
