--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 // Color
 $blue-color: #2ED9E3;
+$blue-color-dark: #27B8C1;
 $light-blue-color: #DFF9FA;
 $grey-color: #E9E9EB;
 $yellow-color: #FDD052;
