--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -12,4 +12,14 @@
     &__content {
         padding: 25px;
     }
+
+    &__img-container {
+        height: 200px;
+        overflow: hidden;
+    }
+
+    &__image {
+        width: 100%;
+        height: auto;
+    }
 }
