adds css heder left block

--- a/src/styles/base/button.scss
+++ b/src/styles/base/button.scss
@@ -48,3 +48,10 @@
         }
     }
 }
+
+
+#select-box {
+    background-color: $black-color;
+    text-transform: uppercase;
+    padding: 5px;
+}
