--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -1,9 +1,9 @@
 body {
+    color: transparentize($black-color, 0.65);
+    background-color: #ECEFF4;
     font-size: 16px;
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: transparentize($black-color, 0.65);
     line-height: 1.5;
-    background: #ECEFF4;
 }
 
 h1 {
@@ -16,8 +16,8 @@ h1 {
 }
 
 h2 {
-    font-size: 1.25rem; //  24px
     color: $grey-color;
+    font-size: 1.25rem; //  24px
     margin: 0 0 0.8em 0;
 }
 
