--- a/src/styles/base/button.scss
+++ b/src/styles/base/button.scss
@@ -1,3 +1,17 @@
+.header {
+    &__button {
+        background-color: rgba(255,255,255,0.1);    
+        border: none;
+        width: 135px;
+        border-radius: 20px;
+        padding: 10px 20px;
+        
+        &--text {
+            margin-right: 5px;
+        }
+    }
+}
+
 .button {
     color: rgba(43,44,55,0.66);
     background-color: $grey-color;
