--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -3,12 +3,10 @@
     background-color: $black-color;
     padding: 10px;
     display: flex;
-    // align-items: center;
     text-transform: uppercase;
 
     &__content {
         display: flex;
-        // justify-content: space-between;
         align-items: center;
     }
 
@@ -19,11 +17,19 @@
         margin-right: 10px;
     }
 
+    &__avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+        position: absolute;
+        right: 5px;
+    }
+
     &__list {
         margin-bottom: 0;
         display: flex;
         list-style: none;
-        // padding-left: 10px;
     }
 
     &__item {
