--- a/src/styles/components/diagram.scss
+++ b/src/styles/components/diagram.scss
@@ -6,13 +6,25 @@
     border-radius: 10px;
 
     &__result {
-        background-color: $blue-color;
-        width: 40%;
         height: 8px;
-        margin-top: -18px;
         border-radius: 10px;
         position: absolute;
         z-index: 1;
+
+        &--red {
+            background-color: $red-color;
+            width: 70%;
+        }
+
+        &--blue {
+            background-color: $blue-color;
+            width: 40%;
+        }
+
+        &--yellow {
+            background-color: $yellow-color;
+            width: 55%;
+        }
     }
 }
 
