adds change conteiner content

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'base/button';
 @import 'base/list';
 @import 'base/menu';
+@import 'base/margin-conteiner';
 
 /* Components */
 @import 'components/download';
