--- a/src/styles/components/diagram.scss
+++ b/src/styles/components/diagram.scss
@@ -4,6 +4,7 @@
     height: 8px;
     margin: 10px 0;
     border-radius: 10px;
+    position: relative;
 
     &__result {
         height: 8px;
@@ -13,7 +14,7 @@
 
         &--red {
             background-color: $red-color;
-            width: 70%;
+            width: 100%;
         }
 
         &--blue {
